[tool.poetry]
name = "bruger-project"
version = "0.1.0"
description = ""
authors = ["Anders-tech1999 <andershlorentzen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
